# opencv_contrib

modules/bgsegm/src/: bgfg_gsoc.cpp
modules/cudaarithm/src/: lut.hpp
modules/cudacodec/src/: NvEncoder.cpp
modules/cudaoptflow/src/: farneback.cpp  nvidiaOpticalFlow.cpp  precomp.hpp
modules/cudev/include/opencv2/cudev/util/: vec_traits.hpp
modules/dnn/src/layers/: elementwise_layers.hpp  lrn_layer.cpp  softmax_layer.cpp
modules/face/src/: face_alignmentimpl.hpp
modules/freetype/: CMakeLists.txt
modules/gapi/src/backends/common/: serialization.cpp
modules/hdf/: CMakeLists.txt
modules/latentsvm/src/: lsvmc_latentsvm.cpp  precomp.hpp
modules/line_descriptor/src/: bitops.hpp
modules/quality/src/: qualitybrisque.cpp
modules/saliency/src/BING/: kyheader.hpp
modules/text/src/: ocr_beamsearch_decoder.cpp  text_detectorCNN.cpp
modules/tracking/src/: tracking_utils.cpp
modules/xfeatures2d/perf/: perf_precomp.hpp  perf_surf.cuda.cpp
modules/xfeatures2d/src/: surf.cuda.cpp
modules/ximgproc/src/: edgepreserving_filter.cpp
modules/xobjdetect/: CMakeLists.txt
modules/xobjdetect/tools/waldboost_detector/: CMakeLists.txt
modules/xphoto/src/: inpainting.cpp
