set(the_description "Object detection algorithms")
ocv_define_module(xobjdetect opencv_core opencv_imgproc opencv_imgcodecs opencv_features WRAP python java objc js)
if (BUILD_opencv_apps AND NOT (APPLE_FRAMEWORK OR WINRT OR IOS))
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tools) 
endif()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data)
